[project]
name = "tamerlite"
version = "0.1.0"
description = "Heuristic search-based temporal planner"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "FBK PSO Unit", email = "tamer@fbk.eu"}
]
urls = { "Homepage" = "https://github.com/fbk-pso/tamerlite" }
dependencies = [
    "min-max-heap==1.0.1",
    "bloom-filter2==2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
rust = [
    "rustamer~=0.1.0"
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-regressions==2.8.3",
    "mypy==1.19.1",
    "ruff==0.14.5",
    "pre-commit==4.0.1",
    "rustamer",
    "unified-planning @ git+https://github.com/aiplan4eu/unified-planning.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tamerlite"]

[tool.hatch.build.targets.sdist]
include = ["src/tamerlite", "README.md", "LICENSE"]

[tool.uv.workspace]
members = ["crates/rustamer"]

[tool.uv.sources]
rustamer = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
# Restrict lint/format to project code; ignore root-level scratch files
# (main.py, test.py, etc.) and vendored directories.
extend-exclude = [
    "ipc2023-dataset",
    "kr",
    "counters",
    "build",
    "dist",
    "/main.py",
    "/test.py",
    "/test_with_llm.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line length handled by formatter
    "E402",  # module-import-not-at-top — used intentionally in places
    "E712",  # `v == True` distinguishes a literal bool from other values
    "E731",  # lambda-assignment — tolerated
    "E741",  # ambiguous variable name (l, O, I) — tolerated in math-heavy code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["F811", "F403", "F405"]

[tool.ruff.format]

[tool.mypy]
check_untyped_defs = true
disable_error_code = ["no-redef"]
files = ["src/tamerlite"]

[[tool.mypy.overrides]]
module = "tamerlite.core"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["unified_planning.*", "min_max_heap", "bloom_filter2"]
ignore_missing_imports = true
