[package]
name = "rustamer"
version = "0.1.0"
edition = "2021"
license = "LGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustamer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.4"
rustamerlib = { path = "../rustamer" }

[profile.profiling]
inherits = "release"
debug = true