[package]
name = "rustamer"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustamer"
crate-type = ["cdylib"]

[dependencies]
rustc-hash = "2.1.1"
pyo3 = "0.27.1"
rustamer-base = { path = "../rustamer-base" }

[profile.profiling]
inherits = "release"
debug = true