[package]
name = "rustamer-base"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pyo3.workspace = true
rustc-hash.workspace = true
num-rational = "0.4.1"
num = "0.4.1"
multiset = "0.0.5"
num-traits = "0.2.16"
regex = "1.9.3"
itertools = "0.15"
im = "15.1.0"
min-max-heap = "1.3"
fastbloom = "0.17"
foldhash = "0.2"
